rename page.css 11

--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -25588,10 +25588,10 @@ html :where(img[class*='wp-image-']) {
   left: 0;
   right: 0;
 }
-.dir-ltr.ivycze5[class][class]::before {
+.dir-ltr.header__search-tabs-filter-where-border-x-0[class][class]::before {
   border-left: 0;
 }
-.dir-rtl.ivycze5[class][class]::before {
+.dir-rtl.header__search-tabs-filter-where-border-x-0[class][class]::before {
   border-right: 0;
 }
 .header__search-tabs-filter-where-hide[class][class]:hover::before {
@@ -26087,54 +26087,54 @@ html :where(img[class*='wp-image-']) {
 .dir.header__search-tabs-link[class][class]:hover:after {
   transform: scaleX(1);
 }
-.o1es9nqs[class][class] {
+.header__search-tabs-filter-body-where-region-item-md-bold[class][class] {
   font-weight: 600;
 }
-.dhjkeof[class][class] {
+.header__search-tabs-panel-content[class][class] {
   height: 100%;
   min-height: 353px;
 }
-.cgjb4qp[class][class] {
+.explore-header__date-category-wrapper[class][class] {
   display: inline-block;
 }
-.dir-ltr.cgjb4qp[class][class] {
+.dir-ltr.explore-header__date-category-wrapper[class][class] {
   padding-left: 8px;
 }
-.dir-rtl.cgjb4qp[class][class] {
+.dir-rtl.explore-header__date-category-wrapper[class][class] {
   padding-right: 8px;
 }
-.e17hsan[class][class] {
+.products-container__alert-warning-date[class][class] {
   display: flex;
   justify-content: center;
 }
-.dir.e17hsan[class][class] {
+.dir.products-container__alert-warning-date[class][class] {
   margin-top: var(--fgg-f-l-a);
 }
-.hnwb2pb[class][class] {
+.products-container__header-text-h2[class][class] {
   color: inherit;
   font-size: 1em;
   font-weight: inherit;
   line-height: inherit;
 }
-.dir.hnwb2pb[class][class] {
+.dir.products-container__header-text-h2[class][class] {
   margin: 0;
   padding: 0;
 }
-.hnwb2pb[class][class]:focus {
+.products-container__header-text-h2[class][class]:focus {
   outline: 0;
 }
-.s1bh1tge[class][class] {
+.products-container__header-text-desc[class][class] {
   color: var(--fo-jk-r-s);
   font-family: var(--e-ls-qkw);
   font-weight: var(--e-y-j-d-v-j);
   font-size: var(--c-zdwk-p);
   line-height: var(--j-p-z-kco);
 }
-.dir.s1bh1tge[class][class] {
+.dir.products-container__header-text-desc[class][class] {
   padding-top: var(--fgg-f-l-a);
 }
 @media (min-width: 744px) {
-  .dir.sewcpu6[class][class] {
+  .dir.products-container__header-text-pb[class][class] {
     padding-bottom: calc(
       var(--spacingBottomMediumAndAbove, var(--spacingBottom)) *
         var(--fgg-f-l-a)
@@ -26142,7 +26142,7 @@ html :where(img[class*='wp-image-']) {
   }
 }
 @media (min-width: 1128px) {
-  .dir.sewcpu6[class][class] {
+  .dir.products-container__header-text-pb[class][class] {
     padding-bottom: calc(
       var(--spacingBottomLargeAndAbove, var(--spacingBottom)) * var(--fgg-f-l-a)
     );
@@ -28370,11 +28370,11 @@ html :where(img[class*='wp-image-']) {
   font-size: 14px !important;
   line-height: 18px !important;
 }
-._9qqdp4 {
+.products-container__mb-footer-rate-star {
   text-align: center !important;
   color: var(--dls19-brand-color) !important;
 }
-._12si43g {
+.products-container__mb-footer-rate-text {
   color: #222 !important;
   padding-left: 4px !important;
   font-weight: 600 !important;
@@ -29041,29 +29041,29 @@ html :where(img[class*='wp-image-']) {
 .dir.c53epf4[class][class] {
   margin-bottom: 24px;
 }
-.bk5zv5c[class][class] {
+.products-container__header-rules-wrapper[class][class] {
   position: relative;
 }
-.dir.b1w3s95i[class][class] {
+.dir.products-container__header-rules-wrapper-pb[class][class] {
   padding-bottom: calc(var(--computedBottom) * var(--fgg-f-l-a));
   padding-top: calc(var(--computedTop) * var(--fgg-f-l-a));
 }
-.cdouqeg[class][class] {
+.products-container__header-rules-list[class][class] {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.dir.sewcpu6[class][class] {
+.dir.products-container__header-text-pb[class][class] {
   padding-bottom: calc(var(--spacingBottom) * var(--fgg-f-l-a));
 }
-.t5p7tdn[class][class] {
+.products-container__rule-text-h2[class][class] {
   color: var(--f-k-smk-x);
   font-family: var(--e-ls-qkw);
   font-weight: var(--jx-zk-pv);
   font-size: var(--lhy-d-yl);
   line-height: var(--fme-bf-w);
 }
-.s1sv3y2s[class][class] {
+.products-container__rule-text-desc[class][class] {
   color: var(--fo-jk-r-s);
   font-family: var(--e-ls-qkw);
   font-weight: var(--e-y-j-d-v-j);
@@ -29073,29 +29073,29 @@ html :where(img[class*='wp-image-']) {
   flex-direction: column;
   gap: var(--fgg-f-l-a);
 }
-.dir.s1sv3y2s[class][class] {
+.dir.products-container__rule-text-desc[class][class] {
   margin-top: 8px;
 }
-.dir-ltr.iahkfss[class][class] {
+.dir-ltr.products-container__rule-text-icon[class][class] {
   padding-left: var(--fgg-f-l-a);
 }
-.c1cjjbbu[class][class]::after {
+.products-container__header-rules-list-after[class][class]::after {
   content: '';
   display: block;
   position: absolute;
   top: 0;
   width: 100%;
 }
-.dir.c1cjjbbu[class][class]::after {
+.dir.products-container__header-rules-list-after[class][class]::after {
   border-top: 1px solid var(--j-qkgmf);
 }
-._1fhpuic {
+.products-container__mb-footer-overlay {
   background-color: #fff !important;
   border-top: 1px solid #ddd !important;
   min-height: 80px !important;
 }
 @supports (padding: env(safe-area-inset-bottom)) {
-  ._1fhpuic {
+  .products-container__mb-footer-overlay {
     padding-bottom: env(safe-area-inset-bottom) !important;
   }
 }
@@ -29103,7 +29103,7 @@ html :where(img[class*='wp-image-']) {
   margin-left: auto;
   margin-right: auto;
 }
-._1ewvwfo {
+.products-container__mb-footer-overlay-wrapper {
   color: #222 !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     'Helvetica Neue', sans-serif !important;
@@ -29113,7 +29113,7 @@ html :where(img[class*='wp-image-']) {
   padding-top: 16px !important;
   padding-bottom: 16px !important;
 }
-._19a1rdq {
+.products-container__mb-footer-content {
   -webkit-box-pack: justify !important;
   -webkit-box-direction: normal !important;
   -webkit-box-orient: horizontal !important;
@@ -29123,7 +29123,7 @@ html :where(img[class*='wp-image-']) {
   flex-direction: row !important;
   justify-content: space-between !important;
 }
-._754m05 {
+.products-container__mb-footer-content-price {
   -webkit-box-pack: start !important;
   -webkit-box-align: start !important;
   -webkit-box-direction: normal !important;
@@ -29134,17 +29134,17 @@ html :where(img[class*='wp-image-']) {
   justify-content: flex-start !important;
   margin-right: 16px !important;
 }
-._176k0ns {
+.products-container__mb-footer-rate-wrapper {
   margin-top: 4px !important;
 }
-._1pg77l15 {
+.products-container__mb-footer-rate {
   -webkit-box-align: baseline !important;
   align-items: baseline !important;
   display: flex !important;
   font-size: 12px !important;
   line-height: 16px !important;
 }
-._75d5jt {
+.products-container__mb-footer-content-btn {
   flex-shrink: 2 !important;
 }
 .site-content__header-button {
@@ -29258,14 +29258,14 @@ html :where(img[class*='wp-image-']) {
   display: table !important;
   clear: both !important;
 }
-._1xw8gzmn {
+.notification__container-account-settings {
   padding-left: 8px !important;
   padding-right: 8px !important;
   min-height: 1px !important;
   position: relative !important;
 }
 @media (min-width: 744px) {
-  ._1xw8gzmn {
+  .notification__container-account-settings {
     width: 100% !important;
     float: left !important;
   }
@@ -29282,7 +29282,7 @@ html :where(img[class*='wp-image-']) {
     float: left !important;
   }
 }
-._1okh7pi0 {
+.login-security__social-acc {
   border-bottom: 1px solid #ebebeb !important;
   padding-top: 24px !important;
   padding-bottom: 24px !important;
@@ -29293,7 +29293,7 @@ html :where(img[class*='wp-image-']) {
   padding-bottom: 16px !important;
 }
 
-._byj74f {
+.prof-hosting__switch-overlay {
   position: absolute !important;
   inset: -1px !important;
   background-color: #008489 !important;
@@ -29308,14 +29308,14 @@ html :where(img[class*='wp-image-']) {
   transition-timing-function: ease-in-out !important;
 }
 @supports (--custom: properties) {
-  ._byj74f {
+  .prof-hosting__switch-overlay {
     background-color: var(--color-checked, #008489) !important;
     border-radius: var(--border-switch-border-radius, 32px) !important;
     border-width: var(--border-switch-border-width, 1px) !important;
     border-color: var(--color-checked, #008489) !important;
   }
 }
-._nkz5o8 {
+.prof-hosting__switch-circle {
   width: 32px !important;
   height: 32px !important;
   background-color: #fff !important;
@@ -29335,7 +29335,7 @@ html :where(img[class*='wp-image-']) {
   transform: translate3d(0, 0, 0) !important;
 }
 @supports (--custom: properties) {
-  ._nkz5o8 {
+  .prof-hosting__switch-circle {
     width: var(--size-switch-size, 32px) !important;
     height: var(--size-switch-size, 32px) !important;
     background-color: var(--color-white, #fff) !important;
@@ -29344,7 +29344,7 @@ html :where(img[class*='wp-image-']) {
     color: var(--color-core-hof, #484848) !important;
   }
 }
-._wd4c3r {
+.prof-hosting__switch-circle-wrapper-spacer {
   position: absolute !important;
   inset: 10px 5px !important;
   background-color: #fff !important;
@@ -29353,11 +29353,11 @@ html :where(img[class*='wp-image-']) {
   transform-origin: right center !important;
 }
 @supports (--custom: properties) {
-  ._wd4c3r {
+  .prof-hosting__switch-circle-wrapper-spacer {
     background-color: var(--color-white, #fff) !important;
   }
 }
-._zsj5a1p {
+.prof-hosting__switch-circle-overlay {
   position: absolute !important;
   inset: 0 !important;
   transform: rotate(0) !important;
@@ -29365,7 +29365,7 @@ html :where(img[class*='wp-image-']) {
   transition-delay: 62.5ms !important;
   transition-duration: 187ms !important;
 }
-._1est833r {
+.prof-hosting__switch-circle-icon-overlay {
   transition-property: -ms-transform, -webkit-transform, transform !important;
   transform: scale(1, 1) !important;
   transition-duration: 62.5ms !important;
@@ -30041,33 +30041,33 @@ tr.show-desktop {
 * Covalent for O2
 * Copyright 2014 Airbnb, Inc
 */
-._8iqo2b {
+.profile-reviews__header {
   position: relative !important;
   z-index: 5 !important;
 }
-._mo78s93 {
+.profile-reviews__header-logo-xs-overlay {
   display: inline-block !important;
 }
 @media (min-width: 1128px) {
-  ._mo78s93 {
+  .profile-reviews__header-logo-xs-overlay {
     display: none !important;
   }
 }
-._3n7658 {
+.profile-reviews__header-logo-xs-overlay-wrapper {
   color: #767676 !important;
   display: inline-block !important;
   font-size: 9px !important;
   margin-left: 8px !important;
   transition: color 1s !important;
 }
-._z7e3cb {
+.profile-reviews__logo-xs-overlay-wrapper {
   display: table-cell !important;
   vertical-align: middle !important;
   transition-property: -ms-transform, -webkit-transform, transform !important;
   transition-duration: 250ms !important;
   transition-timing-function: ease-in-out !important;
 }
-._1gbvotfo {
+.profile-reviews__header-logo-xs-btn {
   display: table-cell !important;
   appearance: none !important;
   background: 0 0 !important;
@@ -30075,7 +30075,7 @@ tr.show-desktop {
   padding: 0 !important;
   margin: 0 !important;
 }
-._3iq7eg {
+.profile-reviews__search-btn {
   font-size: 14px !important;
   line-height: 18px !important;
   letter-spacing: normal !important;
@@ -30113,7 +30113,7 @@ tr.show-desktop {
   vertical-align: top !important;
 }
 @media (min-width: 744px) {
-  ._1fkg0r2:hover {
+  .profile-reviews__search-input:hover {
     box-shadow: rgb(0 0 0 / 10%) 0 2px 4px, rgb(26 26 29 / 8%) 0 4px 12px !important;
   }
 }
@@ -30165,7 +30165,7 @@ tr.show-desktop {
   }
 }
 @media (max-width: 743px) {
-  ._1fkg0r2 {
+  .profile-reviews__search-input {
     -webkit-box-flex: 1 !important;
     -webkit-box-align: center !important;
     align-items: center !important;
@@ -30174,7 +30174,7 @@ tr.show-desktop {
   }
 }
 @media (max-width: 743px) {
-  ._1xb0vsy {
+  .profile-reviews__search-container {
     -webkit-box-align: center !important;
     align-items: center !important;
     inset: 0 !important;
@@ -30186,7 +30186,7 @@ tr.show-desktop {
   }
 }
 @media (max-width: 743px) {
-  ._1wsro53 {
+  .profile-reviews__search-wrapper {
     height: 64px !important;
     left: 0 !important;
     right: 0 !important;
@@ -30196,7 +30196,7 @@ tr.show-desktop {
   }
 }
 @media (max-width: 743px) {
-  ._shzwii {
+  .profile-reviews__search-content {
     transition: -ms-transform 0.3s ease-out, -webkit-transform 0.3s ease-out,
       transform 0.3s ease-out !important;
     display: flex !important;
@@ -30205,7 +30205,7 @@ tr.show-desktop {
   }
 }
 @media (max-width: 743px) {
-  ._sp4c0h {
+  .profile-reviews__search-btn-wrapper {
     -webkit-box-pack: end !important;
     -webkit-box-align: center !important;
     align-items: center !important;
@@ -30220,14 +30220,14 @@ tr.show-desktop {
   }
 }
 @media (max-width: 743px) {
-  ._sp4c0h::before {
+  .profile-reviews__search-btn-wrapper::before {
     width: 32px !important;
     content: ' ' !important;
     display: block !important;
   }
 }
 @media (max-width: 743px) {
-  ._jd5bx3 {
+  .profile-reviews__search-msg {
     position: absolute !important;
     left: 0 !important;
     top: 100% !important;
@@ -31502,7 +31502,7 @@ tr.show-desktop {
   padding-right: 0;
   padding-left: 0;
 }
-._19trzwd {
+.profile-reviews__header-navbar {
   background: #fff !important;
   box-shadow: rgb(235 235 235) 0 1px 0 !important;
   transition-duration: 0.2s !important;
@@ -31510,7 +31510,7 @@ tr.show-desktop {
   transition-timing-function: ease-out !important;
   width: 100% !important;
 }
-._shsmsj {
+.profile-reviews__logo-overlay {
   background-color: #fff !important;
   inset: 0 !important;
   height: 100% !important;
@@ -31521,34 +31521,34 @@ tr.show-desktop {
   transition-property: -ms-transform, -webkit-transform, transform !important;
   transition-timing-function: ease-out !important;
 }
-._dx84z0 {
+.profile-reviews__progress-active-overlay {
   margin-right: 8px !important;
   max-width: 456px !important;
 }
-._1wsro53 {
+.profile-reviews__search-wrapper {
   display: block !important;
   position: absolute !important;
   z-index: 21 !important;
 }
 @media (min-width: 744px) {
-  ._1wsro53 {
+  .profile-reviews__search-wrapper {
     top: 16px !important;
     transition: width 0.2s ease-in !important;
     width: 460px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._1wsro53 {
+  .profile-reviews__search-wrapper {
     left: 80px !important;
   }
 }
 @media (min-width: 744px) {
-  ._shzwii {
+  .profile-reviews__search-content {
     width: 100% !important;
     display: table !important;
   }
 }
-._1fkg0r2 {
+.profile-reviews__search-input {
   background-color: #fff !important;
   transition: box-shadow 0.2s ease-in !important;
   border: 1px solid #ebebeb !important;
@@ -31557,7 +31557,7 @@ tr.show-desktop {
   height: 48px !important;
 }
 @media (min-width: 744px) {
-  ._1fkg0r2 {
+  .profile-reviews__search-input {
     display: table-cell !important;
     width: 100% !important;
     vertical-align: middle !important;
@@ -31575,11 +31575,11 @@ tr.show-desktop {
   color: #484848 !important;
 }
 @media (min-width: 744px) {
-  ._sp4c0h {
+  .profile-reviews__search-btn-wrapper {
     display: none !important;
   }
 }
-._jd5bx3 {
+.profile-reviews__search-msg {
   background-color: rgba(255, 255, 255, 0) !important;
   border: 1px solid #ebebeb !important;
   border-radius: 0 0 4px 4px !important;
@@ -31590,7 +31590,7 @@ tr.show-desktop {
   visibility: hidden !important;
 }
 @media (min-width: 744px) {
-  ._jd5bx3 {
+  .profile-reviews__search-msg {
     position: absolute !important;
     top: 100% !important;
     width: 100% !important;
@@ -31653,14 +31653,14 @@ tr.show-desktop {
   width: 28px !important;
   height: 28px px !important;
 }
-._iiid5y {
+.profile-reviews__header-logo-xs-icon {
   color: #ff5a5f !important;
   display: inline-block !important;
   vertical-align: middle !important;
   font-size: 34px !important;
   transition: color 0.25s !important;
 }
-._5nim5h {
+.profile-reviews__header-logo-xs-wrapper {
   display: table-cell !important;
   height: 64px !important;
   position: relative !important;
@@ -31673,7 +31673,7 @@ tr.show-desktop {
   white-space: nowrap !important;
 }
 @media (min-width: 744px) {
-  ._5nim5h {
+  .profile-reviews__header-logo-xs-wrapper {
     height: 80px !important;
   }
 }
@@ -31890,7 +31890,7 @@ tr.show-desktop {
   }
 }
 @media (max-width: 744px) {
-  ._19trzwd {
+  .profile-reviews__header-navbar {
     display: none !important;
   }
 }
@@ -31933,7 +31933,7 @@ tr.show-desktop {
     padding-right: 44px !important;
   }
 }
-._ousp44 {
+.profile-reviews__header-logo-wrapper {
   position: relative !important;
   z-index: 20 !important;
 }
@@ -32019,7 +32019,7 @@ tr.show-desktop {
     left: 45% !important;
   }
 }
-._1g2dfiu {
+.profile-reviews__logo-xl {
   display: table-cell !important;
 }
 ._1mt76m69 {
@@ -32207,14 +32207,14 @@ tr.show-desktop {
     margin-right: 16px !important;
   }
 }
-._1blc3lt {
+.profile-reviews__search-input-wrapper {
   width: 100% !important;
   height: 100% !important;
   padding-left: 12px !important;
   padding-right: 4px !important;
   position: relative !important;
 }
-._1os10fm {
+.profile-reviews__search-input-label {
   display: table !important;
   margin: 0 !important;
   padding: 0 !important;
@@ -32222,7 +32222,7 @@ tr.show-desktop {
   white-space: nowrap !important;
   width: 100% !important;
 }
-._1hwe6usi {
+.profile-reviews__search-input-icon {
   padding-top: 3px !important;
   padding-left: 5px !important;
   padding-right: 10px !important;
@@ -32231,31 +32231,31 @@ tr.show-desktop {
   height: 100% !important;
   vertical-align: middle !important;
 }
-._1w14zmh {
+.profile-reviews__search-input-field {
   overflow: hidden !important;
   position: relative !important;
 }
-._1w14zmh::-webkit-input-placeholder {
+.profile-reviews__search-input-field::-webkit-input-placeholder {
   color: #767676 !important;
   opacity: 1 !important;
   font-weight: 800 !important;
 }
-._1w14zmh::-moz-placeholder {
+.profile-reviews__search-input-field::-moz-placeholder {
   color: #767676 !important;
   opacity: 1 !important;
   font-weight: 800 !important;
 }
-._1w14zmh:-moz-placeholder {
+.profile-reviews__search-input-field:-moz-placeholder {
   color: #767676 !important;
   opacity: 1 !important;
   font-weight: 800 !important;
 }
-._1w14zmh:-ms-input-placeholder {
+.profile-reviews__search-input-field:-ms-input-placeholder {
   color: #767676 !important;
   opacity: 1 !important;
   font-weight: 800 !important;
 }
-._1w14zmh::placeholder {
+.profile-reviews__search-input-field::placeholder {
   color: #767676 !important;
   opacity: 1 !important;
   font-weight: 800 !important;
@@ -47266,7 +47266,7 @@ tr.show-desktop {
     line-height: 18px !important;
   }
 }
-._1yhfti2 {
+.products-container__alert-warning-date-text {
   display: -webkit-box !important;
   display: -moz-box !important;
   display: -ms-flexbox !important;
@@ -47781,7 +47781,7 @@ tr.show-desktop {
 ._13wkz77 {
   padding-top: 8px !important;
 }
-._1yhfti2 {
+.products-container__alert-warning-date-text {
   display: flex !important;
   color: #c13515 !important;
   font-size: 12px !important;
@@ -57072,7 +57072,7 @@ a:hover {
 .main-content__news-header-pagination {
   padding-right: 16px !important;
 }
-._1okh7pi0 {
+.login-security__social-acc {
   border-bottom: 1px solid #ebebeb !important;
   padding-top: 24px !important;
   padding-bottom: 24px !important;
