--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -60809,7 +60809,7 @@ label {
   font-size: 14px !important;
   line-height: 18px !important;
 }
-._gfomxi {
+.explore-filter-menu__list-label {
   -webkit-box-pack: center !important;
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
