_5kaapu -> flex-items-center

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -59425,7 +59425,7 @@ label {
   -ms-flex-direction: column !important;
   flex-direction: column !important;
 }
-._5kaapu {
+.flex-items-center {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   display: -webkit-box !important;
@@ -60791,7 +60791,7 @@ label {
 ._pgfqnw {
   font-weight: 600 !important;
 }
-._5kaapu {
+.flex-items-center {
   -webkit-box-align: center !important;
   display: flex !important;
   align-items: center !important;
