--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -59424,7 +59424,7 @@ label {
   -ms-flex-direction: column !important;
   flex-direction: column !important;
 }
-._5kaapu {
+.flex-items-center {
   -webkit-box-align: center !important;
   -ms-flex-align: center !important;
   display: -webkit-box !important;
@@ -60788,7 +60788,7 @@ label {
 ._pgfqnw {
   font-weight: 600 !important;
 }
-._5kaapu {
+.flex-items-center {
   -webkit-box-align: center !important;
   display: flex !important;
   align-items: center !important;
