page-shell-mobile__lang-icon-currency & _pgfqnw -> font-semibold

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -42092,7 +42092,7 @@ tr.show-desktop {
   margin-right: 24px !important;
 }
 .page-shell-mobile__lang-text,
-.page-shell-mobile__lang-icon-currency {
+.font-semibold {
   font-weight: 600 !important;
 }
 .page-shell-mobile__lang-text:hover {
@@ -57569,7 +57569,7 @@ a:hover {
 .page-shell-mobile__lang-wrapper:not(last-child) {
   margin-right: 24px !important;
 }
-.page-shell-mobile__lang-icon-currency,
+.font-semibold,
 .page-shell-mobile__lang-text {
   font-weight: 600 !important;
 }
@@ -57940,7 +57940,7 @@ video::cue {
 ._14i3z6h:focus {
   outline: 0 !important;
 }
-._pgfqnw {
+.font-semibold {
   font-weight: 600 !important;
 }
 @keyframes dot {
@@ -59953,7 +59953,7 @@ label {
 ._19c5bku:not(last-child) {
   margin-right: 24px !important;
 }
-._pgfqnw {
+.font-semibold {
   font-weight: 600 !important;
 }
 ._14tkmhr {
@@ -60788,7 +60788,7 @@ label {
   font-size: 16px !important;
   line-height: 20px !important;
 }
-._pgfqnw {
+.font-semibold {
   font-weight: 600 !important;
 }
 .flex-items-center {
