--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -42092,7 +42092,7 @@ tr.show-desktop {
   margin-right: 24px !important;
 }
 .page-shell-mobile__lang-text,
-.page-shell-mobile__lang-icon-currency {
+.font-semibold {
   font-weight: 600 !important;
 }
 .page-shell-mobile__lang-text:hover {
@@ -57568,7 +57568,7 @@ a:hover {
 .page-shell-mobile__lang-wrapper:not(last-child) {
   margin-right: 24px !important;
 }
-.page-shell-mobile__lang-icon-currency,
+.font-semibold,
 .page-shell-mobile__lang-text {
   font-weight: 600 !important;
 }
@@ -57939,7 +57939,7 @@ video::cue {
 ._14i3z6h:focus {
   outline: 0 !important;
 }
-._pgfqnw {
+.font-semibold {
   font-weight: 600 !important;
 }
 @keyframes dot {
@@ -59952,7 +59952,7 @@ label {
 ._19c5bku:not(last-child) {
   margin-right: 24px !important;
 }
-._pgfqnw {
+.font-semibold {
   font-weight: 600 !important;
 }
 ._14tkmhr {
@@ -60785,7 +60785,7 @@ label {
   font-size: 16px !important;
   line-height: 20px !important;
 }
-._pgfqnw {
+.font-semibold {
   font-weight: 600 !important;
 }
 .flex-items-center {
