_ar9stc -> footer__utility-wrapper-xl

--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -28752,7 +28752,7 @@ html :where(img[class*='wp-image-']) {
   margin-bottom: 16px !important;
 }
 @media (min-width: 1128px) {
-  ._ar9stc {
+  .footer__utility-wrapper-xl {
     -webkit-box-pack: justify !important;
     display: flex !important;
     justify-content: space-between !important;
@@ -42072,11 +42072,11 @@ tr.show-desktop {
 .footer__social-ml-32 {
   margin-left: 32px !important;
 }
-._ar9stc {
+.footer__utility-wrapper-xl {
   display: none !important;
 }
 @media (min-width: 1128px) {
-  ._ar9stc {
+  .footer__utility-wrapper-xl {
     -webkit-box-pack: justify !important;
     -ms-flex-pack: justify !important;
     display: -webkit-box !important;
@@ -57549,11 +57549,11 @@ a:hover {
   -webkit-justify-content: center !important;
   justify-content: center !important;
 }
-._ar9stc {
+.footer__utility-wrapper-xl {
   display: none !important;
 }
 @media (min-width: 1128px) {
-  ._ar9stc {
+  .footer__utility-wrapper-xl {
     -webkit-box-pack: justify !important;
     -ms-flex-pack: justify !important;
     display: -webkit-box !important;
@@ -59933,11 +59933,11 @@ label {
   -webkit-justify-content: center !important;
   justify-content: center !important;
 }
-._ar9stc {
+.footer__utility-wrapper-xl {
   display: none !important;
 }
 @media (min-width: 1128px) {
-  ._ar9stc {
+  .footer__utility-wrapper-xl {
     -webkit-box-pack: justify !important;
     -ms-flex-pack: justify !important;
     display: -webkit-box !important;
