_hi9sy & explore-filter-menu__list-desc -> desc

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -52126,7 +52126,7 @@ label {
   padding-top: 8px !important;
   padding-bottom: 16px !important;
 }
-._hi9sy {
+.desc {
   color: #717171 !important;
   margin-top: 4px !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
