--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -11439,7 +11439,7 @@ fieldset[disabled] .btn {
 .explore-filter-menu__group-size-option {
   flex: 0 0 auto !important;
 }
-.explore-filter-menu__list-desc {
+.desc {
   color: #717171 !important;
   margin-top: 4px !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -11546,7 +11546,7 @@ fieldset[disabled] .btn {
   vertical-align: top !important;
   border-radius: 4px !important;
 }
-.explore-filter-menu__list-desc {
+.desc {
   color: #717171 !important;
   margin-top: 4px !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
