--- a/src/css/components/explore-filter-menu.css
+++ b/src/css/components/explore-filter-menu.css
@@ -210,7 +210,7 @@
 .explore-filter-menu__group-size-option {
   flex: 0 0 auto !important;
 }
-.explore-filter-menu__list-desc {
+.desc {
   color: #717171 !important;
   margin-top: 4px !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -317,7 +317,7 @@
   vertical-align: top !important;
   border-radius: 4px !important;
 }
-.explore-filter-menu__list-desc {
+.desc {
   color: #717171 !important;
   margin-top: 4px !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
