_gw4xx4, explore-filter-menu__list-title -> list-title

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -11512,7 +11512,7 @@ fieldset[disabled] .btn {
   flex: 1 1 auto !important;
   width: 100% !important;
 }
-.explore-filter-menu__list-title {
+.list-title {
   color: #222 !important;
   cursor: inherit !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -11574,7 +11574,7 @@ fieldset[disabled] .btn {
   flex: 1 1 auto !important;
   width: 100% !important;
 }
-.explore-filter-menu__list-title {
+.list-title {
   color: #222 !important;
   cursor: inherit !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
