--- a/src/css/components/explore-filter-menu.css
+++ b/src/css/components/explore-filter-menu.css
@@ -283,7 +283,7 @@
   flex: 1 1 auto !important;
   width: 100% !important;
 }
-.explore-filter-menu__list-title {
+.list-title {
   color: #222 !important;
   cursor: inherit !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -345,7 +345,7 @@
   flex: 1 1 auto !important;
   width: 100% !important;
 }
-.explore-filter-menu__list-title {
+.list-title {
   color: #222 !important;
   cursor: inherit !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
