--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -52102,7 +52102,7 @@ label {
   margin-top: 64px !important;
   padding-top: 40px !important;
 }
-._gw4xx4 {
+.list-title {
   color: #222 !important;
   cursor: inherit !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
