--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -52095,7 +52095,7 @@ label {
   display: flex !important;
   align-items: center !important;
 }
-._s50zru {
+.border-bottom-muted {
   border-bottom: 1px solid #ebebeb !important;
 }
 ._1tx6hba {
