--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -18827,7 +18827,7 @@ full__margin-bottom {
     padding-right: 8px !important;
   }
 }
-.input-field-container {
+.form__input {
   width: 100% !important;
   border: none !important;
   outline: 0 !important;
@@ -29195,7 +29195,7 @@ tr.hide {
   white-space: nowrap !important;
 }
 ._7cmsd4,
-.input-field-container {
+.form__input {
   font-size: 16px !important;
   line-height: 20px !important;
   font-weight: 800 !important;
@@ -31839,45 +31839,45 @@ tr.hide {
   line-height: 20px !important;
   font-weight: 400 !important;
 }
-.input-field-container:-webkit-autofill {
+.form__input:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 30px #fff inset !important;
 }
-.input-field-container:-webkit-autofill:hover {
+.form__input:-webkit-autofill:hover {
   -webkit-box-shadow: 0 0 0 30px #fff inset !important;
 }
-.input-field-container:-webkit-autofill:focus {
+.form__input:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0 30px #fff inset !important;
 }
-.input-field-container:-webkit-autofill:active {
+.form__input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0 30px #fff inset !important;
 }
-.input-field-container::-ms-clear {
+.form__input::-ms-clear {
   display: none !important;
 }
-.input-field-container::-webkit-input-placeholder {
+.form__input::-webkit-input-placeholder {
   color: #717171 !important;
   opacity: 1 !important;
 }
-.input-field-container::-moz-placeholder {
+.form__input::-moz-placeholder {
   color: #717171 !important;
   opacity: 1 !important;
 }
-.input-field-container:-moz-placeholder {
+.form__input:-moz-placeholder {
   color: #717171 !important;
   opacity: 1 !important;
 }
-.input-field-container:-ms-input-placeholder {
+.form__input:-ms-input-placeholder {
   color: #717171 !important;
   opacity: 1 !important;
 }
-.input-field-container::placeholder {
+.form__input::placeholder {
   color: #717171 !important;
   opacity: 1 !important;
 }
-.input-field-container:focus {
+.form__input:focus {
   color: #222 !important;
 }
-.input-field-container::-webkit-inner-spin-button {
+.form__input::-webkit-inner-spin-button {
   -webkit-appearance: none !important;
   margin: 0 !important;
 }
@@ -32352,7 +32352,7 @@ tr.hide {
   margin-right: -6px !important;
   color: #717171 !important;
 }
-.input-field-container {
+.form__input {
   width: 100% !important;
   border: none !important;
   outline: 0 !important;
@@ -52023,7 +52023,7 @@ label {
   text-align: inherit !important;
   outline: 0 !important;
 }
-._yrzsibu {
+.form__input {
   width: 100% !important;
   border: none !important;
   outline: 0 !important;
